--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="Imgs/BTC.png" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-		<script src=""></script>
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body data-new-gr-c-s-check-loaded="14.1108.0" data-gr-ext-installed="">
 		<div class="container">
@@ -21,113 +21,108 @@
 							</a>
 						</div>
 					</div>
-		
+
 					<div class="flex flex-wrap justify-center gap-4 mb-12">
-						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all">
-							<i class="fab fa-patreon mr-2 text-xl"></i> Patreon
-						</a>
-						<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-400 hover:bg-blue-500 text-white px-6 py-3 rounded-lg flex items-center transition-all">
-							<i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi
-						</a>
-						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all">
-							<i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee
-						</a>
+						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fab fa-patreon mr-2 text-xl"></i> Patreon </a>
+						<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-400 hover:bg-blue-500 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi </a>
+						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee </a>
 					</div>
 				</header>
-			<table>
-				<tbody>
-					<tr>
-						<th>Crypto</th>
-						<th>Wallet Address</th>
-					</tr>
-					<tr>
-						<td>
-							<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-							<p class="crypto-text">BTC</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
-					</tr>
-					<tr>
-						<td>
-							<img src="Imgs/BCH.png" title="BCH" class="crypto-icon" />
-							<p class="crypto-text">BCH</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
-					</tr>
-					<tr>
-						<td>
-							<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
-							<p class="crypto-text">LTC</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
-					</tr>
-					<tr>
-						<td>
-							<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
-							<p class="crypto-text">ETH</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
-					</tr>
-					<!-- ML -->
-					<tr class="ML">
-						<td>
-							<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-							<p class="crypto-text">BTC</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
-					</tr>
-					<tr class="ML">
-						<td>
-							<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
-							<p class="crypto-text">LTC</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
-					</tr>
-					<tr class="ML">
-						<td>
-							<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
-							<p class="crypto-text">ETH</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
-					</tr>
-					<tr class="ML">
-						<td>
-							<img src="Imgs/usdp.png" title="USDP" class="crypto-icon" />
-							<p class="crypto-text">USDP</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
-					</tr>
-					<tr class="ML">
-						<td>
-							<img src="Imgs/uniswap.webp" title="Uniswap" class="crypto-icon" />
-							<p class="crypto-text">Uniswap</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
-					</tr>
-					<tr class="ML">
-						<td>
-							<img src="Imgs/chainlink.png" title="Chainlink" class="crypto-icon" />
-							<p class="crypto-text">LINK</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
-					</tr>
-					<!-- PM -->
-					<tr class="PM">
-						<td>
-							<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-							<p class="crypto-text">BTC</p>
-						</td>
-						<td class="wallet-address" title="Click to copy">bc1quay76sm5jdnqmdm4lvhcysukw9a2a8v080f8t6</td>
-					</tr>
-				</tbody>
-			</table>
+				<table>
+					<tbody>
+						<tr>
+							<th>Crypto</th>
+							<th>Wallet Address</th>
+						</tr>
+						<tr>
+							<td>
+								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
+								<p class="crypto-text">BTC</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="Imgs/BCH.png" title="BCH" class="crypto-icon" />
+								<p class="crypto-text">BCH</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
+								<p class="crypto-text">LTC</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
+								<p class="crypto-text">ETH</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
+						</tr>
+						<!-- ML -->
+						<tr class="ML">
+							<td>
+								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
+								<p class="crypto-text">BTC</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
+						</tr>
+						<tr class="ML">
+							<td>
+								<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
+								<p class="crypto-text">LTC</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
+						</tr>
+						<tr class="ML">
+							<td>
+								<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
+								<p class="crypto-text">ETH</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
+						</tr>
+						<tr class="ML">
+							<td>
+								<img src="Imgs/usdp.png" title="USDP" class="crypto-icon" />
+								<p class="crypto-text">USDP</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
+						</tr>
+						<tr class="ML">
+							<td>
+								<img src="Imgs/uniswap.webp" title="Uniswap" class="crypto-icon" />
+								<p class="crypto-text">Uniswap</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
+						</tr>
+						<tr class="ML">
+							<td>
+								<img src="Imgs/chainlink.png" title="Chainlink" class="crypto-icon" />
+								<p class="crypto-text">LINK</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
+						</tr>
+						<!-- PM -->
+						<tr class="PM">
+							<td>
+								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
+								<p class="crypto-text">BTC</p>
+							</td>
+							<td class="wallet-address" title="Click to copy">bc1quay76sm5jdnqmdm4lvhcysukw9a2a8v080f8t6</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="copy-message" id="copyMessage" style="display: none; top: 189.463px; left: 37%">Copied!</div>
+			<div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none">
+				<a href="https://www.freecounterstat.com/geozoom.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;base=counter4&amp;type_clic=0" target="_blank"><img border="0" src="https://counter4.freecounterstat.com/private/counter.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;init=1750737038782&amp;init_freecounterstat=0&amp;library=library_counters&amp;coef=1&amp;type=128&amp;lenght=4&amp;pv=0" alt="Click to see detail of visits and stats for this site" title="Click to see detail of visits and stats for this site" /></a><img style="border: none" src="https://counter4.optistats.ovh:4433/private/pointeur/pointeur.gif?|21yux4qkrs2p7put9szj1b4u4sfzth2d|851*1512|en|24|1750737039|208ffbc703407b00196ea3327a9e3d9b|computer|windows|10|chrome|137|United+States|US|40.25840|-111.65910|Provo|Google+Fiber|-21600|0|1750737034|ok|https%3A//cyber-sec0.github.io/|https%3A//greasyfork.org/|js|136.36.57.240|||&amp;init=1750737038782" border="0" width="1" height="1" />
+			</div>
+			<a href="https://www.freecounterstat.com/geozoom.php?c=&amp;base=counter4"></a>
+			<script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;down=async" async=""></script>
+			<script src="script.js" async=""></script>
 		</div>
-		<div class="copy-message" id="copyMessage" style="display: none; top: 189.463px; left: 37%">Copied!</div>
-		<div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none">
-			<a href="https://www.freecounterstat.com/geozoom.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;base=counter4&amp;type_clic=0" target="_blank"><img border="0" src="https://counter4.freecounterstat.com/private/counter.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;init=1750737038782&amp;init_freecounterstat=0&amp;library=library_counters&amp;coef=1&amp;type=128&amp;lenght=4&amp;pv=0" alt="Click to see detail of visits and stats for this site" title="Click to see detail of visits and stats for this site" /></a><img style="border: none" src="https://counter4.optistats.ovh:4433/private/pointeur/pointeur.gif?|21yux4qkrs2p7put9szj1b4u4sfzth2d|851*1512|en|24|1750737039|208ffbc703407b00196ea3327a9e3d9b|computer|windows|10|chrome|137|United+States|US|40.25840|-111.65910|Provo|Google+Fiber|-21600|0|1750737034|ok|https%3A//cyber-sec0.github.io/|https%3A//greasyfork.org/|js|136.36.57.240|||&amp;init=1750737038782" border="0" width="1" height="1" />
-		</div>
-		<a href="https://www.freecounterstat.com/geozoom.php?c=&amp;base=counter4"></a>
-		<script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;down=async" async=""></script>
-		<script src="script.js" async=""></script>
 	</body>
 </html>
