Update preload image in index.html to low.gif

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Hacker09 Support</title>
 		<link rel="icon" href="Imgs/BTC.png" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="preload" href="Imgs/your-matrix-image.gif" as="image" />
+		<link rel="preload" href="Imgs/low.gif" as="image" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
