Fix spacing in contact email link in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div class="bg-white rounded-xl shadow-md p-6 mb-8 max-w-2xl mx-auto">
 						<div class="flex flex-col sm:flex-row justify-center items-center gap-4">
 							<a href="mailto:github.com.036t8@passfwd.com" class="flex items-center text-blue-600 hover:text-blue-800 transition-colors">
-								Contact me at: 
+								Contact me at:&nbsp;
 								<i class="fas fa-envelope mr-2 text-xl"></i>
 								github.com.036t8@passfwd.com
 							</a>
