--- a/m/m.html
+++ b/m/m.html
@@ -1,66 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Website Monitor Settings</title>
-		<link rel="stylesheet" href="styles.css" />
+		<style>
+			body {
+				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+				background-color: #121212;
+				color: #e0e0e0;
+				margin: 0;
+				padding: 2rem;
+			}
+			.container {
+				max-width: 800px;
+				margin: 0 auto;
+			}
+			h2,
+			h3,
+			h4 {
+				color: #bb86fc;
+				border-bottom: 2px solid #373737;
+				padding-bottom: 0.5rem;
+			}
+			h4 {
+				border-bottom: none;
+				margin-bottom: 0.5rem;
+			}
+			.form-group {
+				margin-top: 1rem;
+				margin-bottom: 1.5rem;
+				padding: 1.5rem;
+				background-color: #1e1e1e;
+				border-radius: 8px;
+				border: 1px solid #333;
+			}
+			label {
+				display: block;
+				margin-bottom: 0.5rem;
+				color: #a0a0a0;
+			}
+			.label-with-icon {
+				display: flex;
+				align-items: center;
+				gap: 8px;
+			}
+			.help-icon {
+				cursor: help;
+				background-color: #555;
+				border-radius: 50%;
+				width: 1.2em;
+				height: 1.2em;
+				text-align: center;
+				line-height: 1.2em;
+				font-size: 0.8em;
+			}
+			input,
+			textarea,
+			select {
+				width: 100%;
+				background-color: #2c2c2c;
+				color: #e0e0e0;
+				border: 1px solid #444;
+				border-radius: 4px;
+				padding: 0.75rem;
+				font-family: monospace;
+				margin-bottom: 1rem;
+			}
+			.hidden {
+				display: none;
+			}
+			button {
+				background-color: #bb86fc;
+				color: #121212;
+				font-weight: 700;
+				border: none;
+				border-radius: 4px;
+				padding: 0.75rem 1.5rem;
+				cursor: pointer;
+			}
+			.entry-details strong {
+				font-size: 1.1em;
+			}
+			.entry-details small {
+				display: block;
+				color: #a0a0a0;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container">
 			<h2>Website Monitor</h2>
-			<h4>GLOBAL SETTINGS</h4>
-			<div class="form-group">
-				<div class="interval-group">
-					<div>
-						<label for="checkIntervalHoursInput" class="label-with-icon"><span>Hours</span><span class="help-icon" title="Set the hours to wait between checks.">?</span></label
-						><input type="number" id="checkIntervalHoursInput" min="0" value="0" />
-					</div>
-					<div>
-						<label for="checkIntervalMinutesInput" class="label-with-icon"><span>Minutes</span><span class="help-icon" title="Set the minutes to wait between checks. Minimum total is 1 minute.">?</span></label
-						><input type="number" id="checkIntervalMinutesInput" min="0" value="1" />
-					</div>
-				</div>
-				<button id="saveSettingsBtn">Save Global Settings</button>
-			</div>
-			<div class="header-with-button">
-				<h3>ADD</h3>
-				<button id="toggleFormBtn" title="Add new site">+</button>
-			</div>
-			<div id="formContainer" class="form-group hidden">
-				<h3 id="formTitle">Add New Site or Endpoint</h3>
-				<label class="label-with-icon"><span>Name</span><span class="help-icon" title="A nickname for this entry, for your reference.">?</span></label
-				><input type="text" id="nameInput" placeholder="Ex: Movies 2024" /> <label class="label-with-icon"><span>Endpoint URL</span><span class="help-icon" title="The specific URL the script will request to check for changes.">?</span></label
-				><input type="text" id="urlInput" placeholder="URL to check for changes" /> <label class="label-with-icon"><span>Website to Open (Optional)</span><span class="help-icon" title="If a change is detected, this URL will be opened. If blank, the Endpoint URL is used.">?</span></label
-				><input type="text" id="websiteInput" placeholder="URL to open when a change occurs" />
-				<label class="label-with-icon"><span>Comparison Method</span><span class="help-icon" title="Choose how the script should detect changes.">?</span></label>
-				<select id="comparisonMethodInput">
-					<option value="text">Text Content (ignores HTML tags)</option>
-					<option value="order">Element Order (for lists)</option>
-					<option value="new_items">New Items Only (in a list)</option>
-				</select>
-				<div id="listFields" class="hidden">
-					<label class="label-with-icon"><span>CSS Selector for List Items</span><span class="help-icon" title="A CSS selector to find all items in a list (e.g., 'li.post'). Required for list-based comparisons.">?</span></label
-					><input type="text" id="selectorInput" placeholder="Ex: .post or li[data-script-id]" /> <label class="label-with-icon"><span>Unique ID Attribute</span><span class="help-icon" title="An attribute on each list item that holds a unique ID (e.g., 'id' or 'data-id'). Required for list-based comparisons.">?</span></label
-					><input type="text" id="idAttributeInput" placeholder="Ex: data-script-id or id" />
-				</div>
-				<hr />
-				<div class="label-with-icon"><input type="checkbox" id="tokenEnabledCheckbox" style="width: auto; margin-right: 8px" /> <label for="tokenEnabledCheckbox">Enable Dynamic Token Fetching</label> <span class="help-icon" title="Check this for sites that use temporary security tokens (nonces) that expire.">?</span></div>
-				<div id="tokenFields" class="hidden">
-					<h4>Dynamic Token Settings</h4>
-					<label class="label-with-icon"><span>Token Fetch URL</span><span class="help-icon" title="The URL of the page where the script can find a fresh token.">?</span></label
-					><input type="text" id="tokenUrlInput" placeholder="Page containing the token" /> <label class="label-with-icon"><span>Token CSS Selector</span><span class="help-icon" title="The CSS selector to find the element containing the token on the fetch URL (e.g., 'script').">?</span></label
-					><input type="text" id="tokenSelectorInput" placeholder="e.g., input[name=nonce] or script" /> <label class="label-with-icon"><span>Token Regular Expression (Optional)</span><span class="help-icon" title="Use a RegEx to extract the token from the element's text content. The first capturing group ( ) will be used as the token.">?</span></label
-					><input type="text" id="tokenRegExInput" placeholder='"nonce":"([a-z0-9]+)"' /> <label class="label-with-icon"><span>Token Attribute (Optional)</span><span class="help-icon" title="The attribute of the token element to read (e.g., 'value'). This is ignored if a RegEx is provided.">?</span></label
-					><input type="text" id="tokenAttributeInput" placeholder="e.g., value." /> <label class="label-with-icon"><span>Placeholder in Body/Headers</span><span class="help-icon" title="A unique placeholder (e.g., %%NONCE%%) in your saved Body/Headers that will be replaced with the fresh token.">?</span></label
-					><input type="text" id="tokenPlaceholderInput" placeholder="e.g., %%NONCE%%" />
-				</div>
-				<hr />
-				<label class="label-with-icon"><span>Headers (Optional)</span><span class="help-icon" title="Request headers in JSON format. Needed for some POST requests.">?</span></label
-				><textarea id="headersInput" placeholder='{ "Content-Type": "application/x-www-form-urlencoded" }'></textarea> <label class="label-with-icon"><span>Body (Optional)</span><span class="help-icon" title="Request body data. Providing this will make the request a POST.">?</span></label
-				><textarea id="bodyInput" placeholder="action=search&value=some_data"></textarea>
-				<div class="button-group"><button id="addBtn">Add Site</button></div>
-			</div>
+			<!-- Global Settings & Form Here -->
 			<h3>Monitored Sites</h3>
 			<ul id="sitesList"></ul>
 			<div id="pausedSection">
@@ -70,6 +99,32 @@
 				</details>
 			</div>
 		</div>
-		<script src="script.js"></script>
+
+		<script>
+			document.addEventListener('DOMContentLoaded', () => {
+				// Settings Page JavaScript
+				const loadSites = () => {
+					// Load sites using GM_listValues/GM_getValue
+				};
+
+				const resetForm = () => {
+					// Reset form logic
+				};
+
+				// Event listeners for buttons/inputs
+				document.getElementById('saveSettingsBtn').addEventListener('click', saveGlobalSettings);
+				document.getElementById('addBtn').addEventListener('click', addOrUpdateSite);
+
+				loadSites();
+			});
+
+			function saveGlobalSettings() {
+				// Save settings using GM_setValue
+			}
+
+			function addOrUpdateSite() {
+				// Handle site configuration
+			}
+		</script>
 	</body>
 </html>
