--- a/monitor/index.html
+++ b/monitor/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Website Monitor Settings</title>
-		<link rel="stylesheet" href="m/style.css" />
+		<link rel="stylesheet" href="monitor/style.css" />
 	</head>
 	<body>
 		<div class="container">
