Update help text for unique ID attribute and improve global settings loading logic

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -67,7 +67,7 @@
 					<input type="text" id="selectorInput" placeholder="Ex: .post or li[data-script-id]" />
 					<label class="label-with-icon">
 						<span>Unique ID Attribute</span>
-						<span class="help-icon" title="An attribute on each list item that holds a unique ID (e.g., 'id' or 'data-id'). Required for list-based comparisons.">?</span>
+						<span class="help-icon" title="An attribute on each list item that holds a unique ID (e.g., 'id', 'data-id', 'href' or even 'innerText'). Required for list-based comparisons.">?</span>
 					</label>
 					<input type="text" id="idAttributeInput" placeholder="Ex: data-script-id or id" />
 				</div>
