--- a/monitor/index.html
+++ b/monitor/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Website Monitor Settings</title>
+		<link rel="icon" type="image/png" href="https://i.imgur.com/0kx5i9q.png" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
