Adjust margin-top for tokenEnabledCheckbox for improved layout

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -74,7 +74,7 @@
 				</div>
 				<hr />
 				<div class="label-with-icon">
-					<input type="checkbox" id="tokenEnabledCheckbox" style="width: auto; margin-right: 8px" />
+					<input type="checkbox" id="tokenEnabledCheckbox" style="width: auto; margin-right: 8px; margin-top: 19px;" />
 					<label for="tokenEnabledCheckbox">Enable Dynamic Token Fetching</label>
 					<span class="help-icon" title="Check this for sites that use temporary security tokens (nonces) that expire.">?</span>
 				</div>
