Update headers input placeholder to include 'accept' header for improved clarity

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -111,7 +111,7 @@
 					<span>Headers (Optional)</span>
 					<span class="help-icon" title="Request headers in JSON format. Needed for some POST requests.">?</span>
 				</label>
-				<textarea id="headersInput" placeholder='{ "Content-Type": "application/x-www-form-urlencoded" }'></textarea>
+				<textarea id="headersInput" placeholder='{ "accept": "*/*", "content-type": "application/x-www-form-urlencoded" }'></textarea>
 				<label class="label-with-icon">
 					<span>Body (Optional)</span>
 					<span class="help-icon" title="Request body data. Providing this will make the request a POST.">?</span>
