--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 						</div>
 					</div>
 
-					<div class="flex flex-wrap justify-center gap-4 mb-12">
+					<div class="flex flex-wrap justify-center items-end gap-4 mb-12">
+						<div class="text-center">
+							<p class="text-sm font-bold text-gray-700 mb-1">Preferable</p>
+							<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg flex items-center transition-all ring-2 ring-offset-2 ring-blue-500 shadow-lg"> <i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi </a>
+						</div>
 						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fab fa-patreon mr-2 text-xl"></i> Patreon </a>
-						<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-400 hover:bg-blue-500 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi </a>
 						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee </a>
+					</div>
+					<div class="text-center -mt-8 mb-12">
+						<p class="text-xs text-gray-500">* Ko-fi supports Paypal, Venmo, Debit & Credit cards</p>
 					</div>
 				</header>
 				<table>
