--- a/songs.html
+++ b/songs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Switcher</title>
+    <link rel="icon" href="https://www.youtube.com/s/desktop/03f86491/img/favicon.ico">
     <style>
         * {
             margin: 0;
