--- a/songs.html
+++ b/songs.html
@@ -23,7 +23,26 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: calc(100% - 30px); //leave space for YouTube controls border: none; } #switchBtn { position: fixed; top: 20px; right: 20px; z-index: 1000; padding: 12px 20px; background: #ff0000; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; font-weight: bold; } #switchBtn:hover { background: #cc0000; } 
+        height: calc(100% - 3.5%);
+        border: none;
+      }
+      #switchBtn {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        padding: 12px 20px;
+        background: #ff0000;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+      }
+      #switchBtn:hover {
+        background: #cc0000;
+      } 
     </style>
   </head>
   <body>
