--- a/songs.html
+++ b/songs.html
@@ -19,11 +19,8 @@
       }
 
       iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
-        height: calc(100% - 3.5%);
+        height: 100%;
         border: none;
       }
       #switchBtn {
