Enhance donation section in index.html: add Stripe option and update payment method descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
 						</div>
 						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fab fa-patreon mr-2 text-xl"></i> Patreon </a>
 						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee </a>
+						<a href="https://buy.stripe.com/28E28r2R9d3421q9FM9MY00" target="_blank" class="donation-btn bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <img src="https://i.imgur.com/AP0gaZh.png" alt="Stripe" class="h-6 mr-2"> Stripe </a>
 					</div>
 					<div class="text-center -mt-8 mb-12">
-						<p class="text-xs text-gray-500">* Ko-fi supports Paypal, Venmo, Debit & Credit cards</p>
+						<p class="text-xs text-gray-500">* Ko-fi supports Paypal, Venmo and Debit & Credit cards</p>
+						<p class="text-xs text-gray-500">* Patreon supports PayPal, Venmo, Apple Pay and Debit & Credit cards</p>
+						<p class="text-xs text-gray-500">* BuyMeACoffee supports Cash App, Bank transfers and Debit & Credit cards</p>
+						<p class="text-xs text-gray-500">* Stripe supports Amazon Pay, Link, Affirm, Cash App and Debit & Credit Cards</p>
 					</div>
 				</header>
 				<table>
